refactor(core): isolate product-specific trading rules and calculations